# UniversalBot

./: .gitignore  Cargo.toml  LICENSE  README.md
api/: go.mod  go.sum  login.go
api/common/: connection.go  models.go  structs.go  utils.go
api/guildDetails/: main.go
api/guildsInfo/: main.go
api/login/: main.go
api/modifyGuild/: main.go
migrations/2019-10-17-085615_create_servers/: down.sql  up.sql
migrations/2019-10-25-202230_create_roles/: up.sql
migrations/2020-02-16-140747_create_commands/: up.sql
migrations/2020-02-19-084227_actions/: up.sql
migrations/2020-02-20-084947_temp_bans_mutes/: down.sql  up.sql
migrations/2020-02-20-084947_temp_operations/: down.sql  up.sql
migrations/2020-03-04-122413_special_entities/: down.sql  up.sql
src/: .#handler.rs  command.rs  config.rs  handler.rs  main.rs  schema.rs  tests.rs  utils.rs
src/bot_modules/: mod.rs
src/bot_modules/dev/: mod.rs
src/bot_modules/main/: about_command.rs  cmd_command.rs  help_command.rs  mod.rs  modules_command.rs  perms_command.rs  prefix_command.rs  setup_command.rs
src/bot_modules/moderation/: ban_command.rs  kick_command.rs  lock_command.rs  mod.rs  modtools_command.rs  mute_command.rs  temp_ban_command.rs  unban_command.rs  unlock_command.rs  unmute_command.rs  warn_command.rs
src/database/: mod.rs  models.rs  schema.rs
src/utils/: db.rs  mod.rs  object_finding.rs  perms.rs  special_entities_tools.rs
web/: .rebel_readline_history  README.md  project.clj  spago.dhall
web/public/: index.html
web/script/: repl.clj
web/src/: AppM.purs  Env.purs  Main.purs
(+55 files in other folders)
