[package]
name = "UniversalBot"
version = "0.1.0"
authors = ["Mikolaj Radkowski <yknomeh@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.7.1"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
config = "0.9"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
chrono = "0.4.9"
fern = "0.5.8"