[package]
name = "UniversalBot"
version = "0.1.0"
authors = ["Mikołaj Radkowski <yknomeh@protonmail.com>"]
edition = "2018"

[profile.dev]
panic = "unwind"

[dependencies]
serenity = "0.7.1"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
config = "0.9"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
chrono = "0.4.9"
pretty_env_logger = "0.4"