[package]
name = "utter_bot"
version = "0.1.0"
authors = ["Mikołaj Radkowski <yknomeh@protonmail.com>"]
edition = "2018"

[profile.dev]
panic = "unwind"

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", rev = "5f9a27a" }
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
config = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
chrono = "0.4.10"
pretty_env_logger = "0.4"
